rns-lang/tests/snapshots/parser-outside_class_directive-integer.snap
---
source: jasm/tests/integration_test.rs
expression: "&combined"
---
----- INPUT  -----
42 ; the answer
.class public HelloWorld

----- STDOUT -----

----- STDERR -----
Error: Unexpected integer before class definition
   ╭─[ test_data/integration/parser/outside_class_directive/integer.ja:1:1 ]
   │
 1 │ 42 ; the answer
   │ ─┬  
   │  ╰── The '42' integer must appear inside a class definition.
   │ 
   │ Note: Integer literals are typically used as instruction arguments inside '.code' blocks.
───╯
